--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,5 +5,9 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./app /app
+COPY ./init_db.py /init_db.py
+COPY ./start.sh /start.sh
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+RUN chmod +x /start.sh
+
+CMD ["/start.sh"]
